<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/moveDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp" />

    <TextView
        android:id="@+id/moveShowID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_tv"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/moveEnterID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/showMyDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/myDatePickerButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date" />

    <Button
        android:id="@+id/butUpdateDate"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/edit" />

</LinearLayout>