<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text=""
        android:textSize="18sp" />

    <TextView
        android:id="@+id/DelShowID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/delEnterID"
        android:text="@string/delete_tv"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/delEnterID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/display"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/delTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/enterTitle"
        android:text="@string/create_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/DelShowID"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/delTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/enterTime"
        android:text="@string/create_time"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/enterTitle"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/delDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/enterDesc"
        android:text="@string/create_desc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/enterTime"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:gravity="top"
        android:lines="3"
        android:scrollbars="vertical"
        android:singleLine="false" />

    <Button
        android:id="@+id/butEdit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/enterDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/edit" />

</RelativeLayout>