<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/displayDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text=""
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enterID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/butDeleteAll"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/showID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enterID"
        android:layout_alignBottom="@+id/enterID"
        android:layout_alignParentLeft="true"
        android:text="@string/delete_tv"
        android:textSize="18sp" />

    <Button
        android:id="@+id/butDeleteSingle"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/butDeleteAll"
        android:layout_alignBottom="@+id/butDeleteAll"
        android:layout_alignParentRight="true"
        android:text="@string/delete_single" />

    <Button
        android:id="@+id/butDeleteAll"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/displayDel"
        android:text="@string/delete_all" />

</RelativeLayout>